--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "website",
+  "homepage": "http://gouth7.github.io/Travel",
+  "name": "map",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
+    "@trendmicro/react-sidenav": "^0.4.5",
+    "google-maps-react": "^2.0.2",
+    "node-sass": "^4.11.0",
+    "react": "^16.8.6",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-image-lightbox": "^5.1.0",
+    "react-modal-video": "^1.2.1",
+    "react-scripts": "^2.1.3",
+    "react-table": "^6.8.6"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -21,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
