--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gouth7.github.io/Travel",
+  "homepage": "http://gouth7.github.io/travel",
   "name": "map",
   "version": "0.1.0",
   "private": true,
